# kernel-development-flake

./: README.md  flake.nix  justfile
avy-init/: Cargo.toml  default.nix
avy-init/src/: main.rs
configs/: kernel.nix
kdf-cli/: default.nix  pyproject.toml
kdf-cli/src/kdf_cli/: __init__.py  bg_tasks.py  main.py  qemu.py  virtiofs.py
kdf-init/src/: main.rs  system.rs
