[project]
name = "kdf-cli"
version = "0.1.0"
description = "Kernel development flake - Manage kdf-init initramfs and kernel execution"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "kdf contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
kdf = "kdf_cli.main:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
